# CuveLaboServer

./: README.md  __main__.py  _setup.py  package-lock.json  pyproject.toml  setup.py
Removed/TortankLib/Deprecated Libs/: I2C.py  bad_ADS1115.py
TortankLib/: ADS1115.py  Tortank.py
TortankWebServer/: __init__.py  __main__.py
TortankWebServer/server/: __init__.py  __main__.py  main.py
TortankWebServer/server/TortankLib/: Tortank.py
TortankWebServer/static/: asset-manifest.json  index.html
TortankWebServer/static/static/js/: main.7358033c.js.map
WebApp/client/: package-lock.json  package.json
WebApp/client/src/: API.tsx  App.js  index.js
WebApp/client/src/Cuve/: Cuve.css  Cuve.tsx
WebApp/client/src/Tortank/Cuve/: Cuve.css  Cuve.tsx
WebApp/client/src/Tortank/Cylindre/: Cylindre.tsx
WebApp/client/src/Wave/: Wave.css  Wave.tsx
WebApp/server/: .gitignore  main.py
WebApp/server/TortankLib/: B_I2C.py  Tortank.py
WebApp/server/static/: asset-manifest.json  index.html
WebApp/server/static/static/css/: main.8b59e539.css  main.8b59e539.css.map
WebApp/server/static/static/js/: 465.4171f7bf.chunk.js  465.4171f7bf.chunk.js.map  main.20686243.js  main.20686243.js.map  main.d8e1c279.js  main.d8e1c279.js.map  (+2 more)
WebPage/: postbuild.js
WebPage/src/Tortank/Cuve/: Cuve.css
WebPage/src/Tortank/Cylindre/: Cylindre.css
WebPage/src/Wave/: Wave.tsx
src/CarapuceWebServer/: Carapuce.py  __init__.py  __main__.py
src/CarapuceWebServer/CarapuceLib/: Carapuce.py
src/Common/: LaboBase.py  WebServerBase.py
src/Common/static/: asset-manifest.json  index.html
src/TortankWebServer/: Tortank.py  __init__.py  __main__.py
src/TortankWebServer/TortankLib/: ADS1115.py  I2C.py  NewADS1115.py  Tortank.py
src/TortankWebServer/static/: asset-manifest.json  index.html
src/WebPage/: package-lock.json  package.json  postbuild.js
src/WebPage/public/: manifest.json
src/WebPage/src/: App.css  App.js  index.js
src/WebPage/src/API/: Admin.tsx  ClientAPI.tsx  GetBaseData.tsx  GetData.tsx  GetIpAdress.tsx  MotorSpeed.tsx  PostData.tsx  SetMotorsSpeed.tsx  UpdatedValue.tsx  WaterLevel.tsx
src/WebPage/src/Graph/: Graph.tsx  GraphAnimation.tsx  GraphData.tsx  GraphOption.tsx
src/WebPage/src/RegisteredUserPanel/: RegisteredUserPanel.css  RegisteredUserPanel.tsx
src/WebPage/src/Tooltip/: Tooltip.css  Tooltip.tsx
src/WebPage/src/Wave/: Wave.css
(+251 files in other folders)
