[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TortankWebServer"
version = "0.1.0"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/AlphaGaming7780/TortankWebServer"
Issues = "https://github.com/AlphaGaming7780/TortankWebServer/issues"