[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CuveLaboServer"
version = "0.1.0"
authors = [
  	{ name="Trioen Loïc", email="trioen.loic@gmail.com" },
  	{ name="Mathys Deboever", email="" },
  	{ name="Samy", email="" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
	'Flask',
	'gpiozero',
	'ADS1x15-ADC',
	'socket
]

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = [
  "src/TortankWebServer",
  "src/CarapuceWebServer",
  "src/Common"
]

[project.scripts]
TortankWebServer = "TortankWebServer.__main__:main"
CarapuceWebServer = "CarapuceWebServer.__main__:main"

[project.urls]
Repository = "https://github.com/AlphaGaming7780/CuveLaboServer.git"
Homepage = "https://github.com/AlphaGaming7780/CuveLaboServer"
Issues = "https://github.com/AlphaGaming7780/CuveLaboServer/issues"